--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "type": "git",
     "url": "git+https://github.com/Avido-AI/avido-node.git"
   },
-  "author": "",
+  "author": "avido",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Avido-AI/avido-node/issues"
